@@ -1,3 +1,10 @@
+2008-11-26  Ludovic Marcotte  <lmarcotte@inverse.ca>
+
+        * js/CalDAVAclManager.js remove unnecessary calls
+	to dump() and we now correctly set the identity
+	of all calendars, even for those we don't own.
+	* Bumped the version number to 0.90pre21
+
 2008-11-24  Ludovic Marcotte  <lmarcotte@inverse.ca>
 
 	* chrome/content/sogo-connector/addressbook/edit-list-overlay.js
